--- a/report/summary.tex
+++ b/report/summary.tex
@@ -353,8 +353,10 @@ In this section we will summarize the results of Llama-2 models fine-tuned using
 \subsubsection{HuggingFace Leaderboard}
 First we'll summarize the results of our fine-tuned models versus the Meta-Llama models on the Huggingface Open LLM leaderboard.
 The leaderboard is a wrapper for the ``Eleuther AI Language Model Evaluation Harness". 
-Specifically, the leaderboard measures the 25-shot performance of LLMs on the arc-challenge dataset, the 10-shot performance on the HellaSwag dataset, the 0-shot performance on TurthfulQA, and the 5-shot performance on MMLU. For arc-challenge and HellaSwag performance is measured using the acc$-$norm metric of EleutherAI, for TruthfulQA they use the mc2 metric, and for MMLU they average the accuracy of the model across tasks in the MMLU dataset.
+Specifically, the leaderboard measures the 25-shot performance of LLMs on the arc-challenge dataset, the 10-shot performance on the HellaSwag dataset, the 0-shot performance on TurthfulQA, and the 5-shot performance on MMLU. 
+For arc-challenge and HellaSwag performance is measured using the acc$-$norm metric of EleutherAI, for TruthfulQA they use the mc2 metric, and for MMLU they average the accuracy of the model across tasks in the MMLU dataset.
 The nice thing about the leaderboard is one can submit either the full model or submit just the adapter layers and give the base model separately.
+However, it is our understanding that if we submit the adapter layers separately then the models are merged using the ``simple-merge" described above.
 \begin{table}
 \begin{center}
 \begin{tabular}{|c|c|c|c|c|c|}
@@ -378,13 +380,13 @@ Llama-2-13b-ELI5-wiki&   59.43             &  59.98               & 82.43       
 \caption{Results for Llama-2 models on Huggingface Open LLM Leaderboard}.
 \label{table:hfleaderboard}
 \end{table}
-Here Llama-2-7b is the base 7 billion model and Llama-2-7b-chat is the Llama-2 model which has undergone RLHF.
+
+In table \ref{table:hfleaderboard} Llama-2-7b is the base 7 billion model and Llama-2-7b-chat is the Llama-2 model which has undergone RLHF.
 The remaining models are fine-tuned versions of the base-model. 
 Specifically, they are trained using SFT and QLORA on the ELI5 SFT dataset, the Simple Wikipedia Instruct dataset, or their combination. The second half of the table is the same, except for the 13B parameter model.
-
-%All that said, to get the above results we quantized and dequantized the 7B model before merging, while for the 13B model we quantized the model to bfloat16 and then merged. 
-%For the 7B model we could perform the quantization and dequantization on a 40GB A100.
-%For the 13B model we directly submitted the adapter layers to the HuggingFace leaderboard and used the ungated Llama-2-7b-hf model from NousResearch (the Meta-Llama model is gated and although it can be downloaded, we were not able to use it as a base model on the leaderboard).
+For the 13B parameter models we submitted the adapter and base models separately, so we believe they are merged using the simple merge procedure.
+In addition, we used the ungated Llama-2-7b-hf model from NousResearch as the base model since the Meta-Llama-2-7b is gated and cannot be used as a base model.
+We have submitted the merge 13B parameter models using the careful merge and will update the table once results become available.
 
 In Table \ref{table:hfleaderboard} we see that of the 7B models, the Meta-Llama-2-7b-chat performs the best on average with the Llama-2 model trained on ELI5 and Simple Wikipedia performing the second best.
 One surprising thing is the chat model actually performs worse than the base model on the Arc-Challenge dataset, and here the model trained on just Simple Wikipedia QA pairs performs the best. 
@@ -397,7 +399,6 @@ On the other datasets it barely improves over the model trained on the combined 
 We are not sure what the cause of this effect is, somehow training the model more on Reddit data makes the model more honest!
 This result could also be an artifact of a poor choice of hyperparameters, and perhaps with a different learning rate and/or after averaging over initializations the difference would go away or the model trained on the combined dataset would perform better.
 
-\subsubsection{Judging the Validation Set with GPT-4}
 
 
 \subsubsection{ROUGE and BERTScore}
@@ -505,6 +506,9 @@ Given that a text is considered simpler if its grade level is lower and its read
 In the latter case, the readability also went up by about 1.6518 points while the grade level went up by 0.067.
 Once again, in this case our metrics for readability are moving in opposite directions. 
 Finally, from the table we also see that the model trained on just ELI5 tends to produce the simplest text. 
+
+
+\subsubsection{Judging the Validation Set with GPT-4}
 
 
 \subsubsection{MT(S)-Bench}
